--- a/index.html
+++ b/index.html
@@ -3,22 +3,48 @@
 <head>
     <meta charset="utf-8">
     <title>Sit On Chair</title>
-    <link rel="stylesheet" href="css/header_style.css">
     <link rel="stylesheet" href="css/shared.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,600i,700,700i,800&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="css/header_style.css">
+    <link rel="stylesheet" href="css/section_one.css">
+    <link rel="stylesheet" href="css/section_two.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,600i,700,700i,800&amp;subset=latin-ext"
+          rel="stylesheet">
 </head>
-    <header>
-        <div class="centering-container header-wrapper">
-            <h1 class="header-logo">SIT <span class="green_impact">ON</span> CHAIR</h1>
-            <nav class="header-nav">
-                <ul class="header-list">
-                    <li><a href="#"> O FIRMIE</a></li>
-                    <li><a href="#">GALERIA</a></li>
-                    <li><a href="#">KONTAKT</a></li>
-                </ul>
-            </nav>
+<header>
+    <div class="centering-container header-wrapper">
+        <h1 class="header-logo">SIT <span class="green_impact">ON</span> CHAIR</h1>
+        <nav class="header-nav">
+            <ul class="header-list">
+                <li><a href="#"> O FIRMIE</a></li>
+                <li><a href="#">GALERIA</a></li>
+                <li><a href="#">KONTAKT</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<section class="firstone">
+    <article class="centering-container one-content">
+        <div class="container-photo">
+            <img class="black_chair" src="images/black_chair.png" />
         </div>
-    </header>
+        <div class="first_content">
+            <p>SIT <span class="green_impact">ON</span> OUR <span class="green_impact">CHAIR</span></p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores consequuntur deleniti distinctio ducimus, eaqueuntur deleniti distinctio.  asperiores consequuntur deleniti distinctio ducimus.
+                ducimus, eaque!</p>
+            <button class="green_button"  type="submit" value="ZOBACZ WIĘCEJ">ZOBACZ WIĘCEJ</button>
+        </div>
+    </article>
+</section>
+<section class="secondone">
+        <article class="centering-container second_article">
+    <div class="banner"></div>
+    <div class="banner"></div>
+    <div class="banner_other"></div>
+        </article>
+</section>
+<section></section>
+<section></section>
+<section></section>
 
 <body>
 
