Seciotn one- modified. Section two- created banners content.

--- a/index.html
+++ b/index.html
@@ -37,9 +37,22 @@
 </section>
 <section class="secondone">
         <article class="centering-container second_article">
-    <div class="banner"></div>
-    <div class="banner"></div>
-    <div class="banner_other"></div>
+    <div class="banner banner-1">
+        <div class="banner-description">
+            <h5>Chair CLAIR</h5>
+        </div>
+    </div>
+    <div class="banner banner-2">
+        <div class="banner-description">
+            <h5>Chair MARGARITA</h5>
+        </div>
+    </div>
+    <div class="banner-other">
+        <h4>Finds all inputs</h4>
+
+        <p class="banner-other-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, inventore magni nobis quia sequi tenetur.</p>
+        <p class="banner-other-content">Adipisci beatae enim in minima officiis repellat similique sunt. Consequatur eos pariatur unde velit.</p>
+    </div>
         </article>
 </section>
 <section></section>
