Some corrections in section two. Added section three.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/header_style.css">
     <link rel="stylesheet" href="css/section_one.css">
     <link rel="stylesheet" href="css/section_two.css">
+    <link rel="stylesheet" href="css/section_three.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,600i,700,700i,800&amp;subset=latin-ext"
           rel="stylesheet">
 </head>
@@ -25,37 +26,72 @@
 <section class="firstone">
     <article class="centering-container one-content">
         <div class="container-photo">
-            <img class="black_chair" src="images/black_chair.png" />
+            <img class="black_chair" src="images/black_chair.png"/>
         </div>
         <div class="first_content">
             <p>SIT <span class="green_impact">ON</span> OUR <span class="green_impact">CHAIR</span></p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores consequuntur deleniti distinctio ducimus, eaqueuntur deleniti distinctio.  asperiores consequuntur deleniti distinctio ducimus.
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A asperiores consequuntur deleniti distinctio
+                ducimus, eaqueuntur deleniti distinctio. asperiores consequuntur deleniti distinctio ducimus.
                 ducimus, eaque!</p>
-            <button class="green_button"  type="submit" value="ZOBACZ WIĘCEJ">ZOBACZ WIĘCEJ</button>
+            <button class="green_button" type="submit" value="ZOBACZ WIĘCEJ">ZOBACZ WIĘCEJ</button>
         </div>
     </article>
 </section>
 <section class="secondone">
-        <article class="centering-container second_article">
-    <div class="banner banner-1">
-        <div class="banner-description">
-            <h5>Chair CLAIR</h5>
+    <article class="centering-container second_article">
+        <div class="banner banner-1">
+            <div class="banner-description">
+                <h5>Chair CLAIR</h5>
+                <div class="green-underline"></div>
+            </div>
         </div>
-    </div>
-    <div class="banner banner-2">
-        <div class="banner-description">
-            <h5>Chair MARGARITA</h5>
+        <div class="banner banner-2">
+            <div class="banner-description">
+                <h5>Chair MARGARITA</h5>
+                <div class="green-underline"></div>
+            </div>
         </div>
-    </div>
-    <div class="banner-other">
-        <h4>Finds all inputs</h4>
-
-        <p class="banner-other-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem error, inventore magni nobis quia sequi tenetur.</p>
-        <p class="banner-other-content">Adipisci beatae enim in minima officiis repellat similique sunt. Consequatur eos pariatur unde velit.</p>
-    </div>
-        </article>
+        <div class="banner-other">
+            <h4>Finds all inputs</h4>
+            <div class="green-underline"></div>
+            <p class="banner-other-content"> Lorem ipsum dolor sit amet, consectetur adipisicing elit.Adipisci beatae
+                enim in minima officiis repellat.Adipisci beatae enim in minima officiis repellat. </p>
+            <p class="banner-other-content">Adipisci beatae enim in minima officiis repellat similique sunt. Consequatur
+                eos pariatur unde.</p>
+        </div>
+    </article>
 </section>
-<section></section>
+<section class="thirdone">
+    <article class="centering-container">
+        <h4 class="thirdone-header">CENNIK</h4>
+        <div class="green-underline"></div>
+        <div class="thirdone-banners">
+            <div class="banner-circle">
+                <h3 class="green_impact">BASIC PLAN</h3>
+                <div class="main_content-round"></div>
+                <div class="gray-banner-content"></div>
+                <div class="gray-banner-content"></div>
+                <div class="round">
+                    <div class="round-inside">
+                    </div>
+                </div>
+                <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
+            </div>
+            <div class="banner-circle">
+                <div class="round">
+                    <div class="round-inside">
+                    </div>
+                </div>
+            </div>
+            <div class="banner-circle">
+                <div class="round">
+                    <div class="round-inside">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
+</section>
 <section></section>
 <section></section>
 
