Added content in section 3.

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <div class="banner-circle">
                 <h3 class="green_impact">BASIC PLAN</h3>
                 <div class="main_content-round"></div>
-                <div class="gray-banner-content"></div>
-                <div class="gray-banner-content"></div>
+                <div class="gray-banner-content">Serwis</div>
+                <div class="gray-banner-content">Zakup towaru + dowóz</div>
                 <div class="round">
                     <div class="round-inside">
                     </div>
@@ -78,16 +78,29 @@
                 <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
             </div>
             <div class="banner-circle">
+                <h3 class="green_impact">STANDARD PLAN</h3>
+                <div class="main_content-round"></div>
+                <div class="gray-banner-content">Serwis</div>
+                <div class="gray-banner-content">Zakup towaru + dowóz</div>
+                <div class="gray-banner-content">Gwarancja 5 lat</div>
                 <div class="round">
                     <div class="round-inside">
                     </div>
                 </div>
+                <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
             </div>
             <div class="banner-circle">
-                <div class="round">
-                    <div class="round-inside">
+                    <h3 class="green_impact">ADVANCE PLAN</h3>
+                    <div class="main_content-round"></div>
+                    <div class="gray-banner-content">Serwis</div>
+                    <div class="gray-banner-content">Zakup towaru + dowóz</div>
+                    <div class="gray-banner-content">Gwarancja 6 lat</div>
+                    <div class="gray-banner-content">Porady projektanta</div>
+                    <div class="round">
+                        <div class="round-inside">
+                        </div>
                     </div>
-                </div>
+                    <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
             </div>
         </div>
     </article>
