--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/section_one.css">
     <link rel="stylesheet" href="css/section_two.css">
     <link rel="stylesheet" href="css/section_three.css">
+    <link rel="stylesheet" href="css/section_four.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,600,600i,700,700i,800&amp;subset=latin-ext"
           rel="stylesheet">
 </head>
@@ -17,6 +18,11 @@
         <nav class="header-nav">
             <ul class="header-list">
                 <li><a href="#"> O FIRMIE</a></li>
+                <ul>
+                    <li>Aktualności</li>
+                    <li>Nasz team</li>
+                    <li>Historia</li>
+                </ul>
                 <li><a href="#">GALERIA</a></li>
                 <li><a href="#">KONTAKT</a></li>
             </ul>
@@ -68,7 +74,10 @@
         <div class="thirdone-banners">
             <div class="banner-circle">
                 <h3 class="green_impact">BASIC PLAN</h3>
-                <div class="main_content-round"></div>
+                <div class="main_content-round">
+                    <span>85<sup>99</sup></span>
+                    <p>PLN/MSC</p>
+                </div>
                 <div class="gray-banner-content">Serwis</div>
                 <div class="gray-banner-content">Zakup towaru + dowóz</div>
                 <div class="round">
@@ -79,7 +88,10 @@
             </div>
             <div class="banner-circle">
                 <h3 class="green_impact">STANDARD PLAN</h3>
-                <div class="main_content-round"></div>
+                <div class="main_content-round">
+                    <span>95<sup>99</sup></span>
+                    <p>PLN/MSC</p>
+                </div>
                 <div class="gray-banner-content">Serwis</div>
                 <div class="gray-banner-content">Zakup towaru + dowóz</div>
                 <div class="gray-banner-content">Gwarancja 5 lat</div>
@@ -90,23 +102,61 @@
                 <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
             </div>
             <div class="banner-circle">
-                    <h3 class="green_impact">ADVANCE PLAN</h3>
-                    <div class="main_content-round"></div>
-                    <div class="gray-banner-content">Serwis</div>
-                    <div class="gray-banner-content">Zakup towaru + dowóz</div>
-                    <div class="gray-banner-content">Gwarancja 6 lat</div>
-                    <div class="gray-banner-content">Porady projektanta</div>
-                    <div class="round">
-                        <div class="round-inside">
-                        </div>
+                <h3 class="green_impact">ADVANCE PLAN</h3>
+                <div class="main_content-round">
+                    <span>211<sup>00</sup></span>
+                    <p>PLN/MSC</p>
+                </div>
+                <div class="gray-banner-content">Serwis</div>
+                <div class="gray-banner-content">Zakup towaru + dowóz</div>
+                <div class="gray-banner-content">Gwarancja 6 lat</div>
+                <div class="gray-banner-content">Porady projektanta</div>
+                <div class="round">
+                    <div class="round-inside">
                     </div>
-                    <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
+                </div>
+                <button class="green-impact-button" type="submit" value="DOŁĄCZ">DOŁĄCZ</button>
             </div>
         </div>
     </article>
 </section>
-<section></section>
-<section></section>
+<section class="fourth-one">
+    <article class="centering-container">
+        <h3>KONTAKT</h3>
+        <div class="full-form-content">
+            <div class="green-underline"></div>
+            <div class="form">
+                <form id="main-form">
+                    <input type="text" name="name" placeholder="Imię"><br>
+                    <input type="text" name="email" placeholder="email"><br>
+                    <textarea cols="20" rows="5" placeholder="Wiadomość"></textarea>
+                </form>
+            </div>
+        </div>
+        <div class="form-confirmation">
+            <div class="red-chair">
+                <img src="images/red_chair.png">
+            </div>
+            <div class="reg-checkbox">
+                <input type="checkbox" id="regulamin" checked>
+                <label for="regulamin">Zgadzam się na przetwarzanie<br> danych osobowych.</label>
+            </div>
+            <button class="green_button" type="submit" value="WYŚLIJ">WYŚLIJ</button>
+        </div>
+    </article>
+</section>
+<footer class="centering-container">
+    <div class="left-foot"><p>Copyrights 2014 | All Rights Reserved - Sit On Chair</p></div>
+    <div class="right-foot">
+        <div class="social-media">
+            <img src="images/flickr.png">
+            <img src="images/vimeo.png">
+            <img src="images/pinterest.png">
+            <img src="images/twitter.png">
+        </div>
+        <p>SIT <b>ON</b> CHAIR</p>
+    </div>
+</footer>
 
 <body>
 
